--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,17 +1,31 @@
 
-.filter-btn .item-filter{
+.filter-btn .button{
     color: var(--color-title);
     background: var(--color-bg-second);
+
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
     border-radius: 4px;
 }
 
-.filter-btn .item-filter:hover, .filter-btn .item-filter:focus{
+
+.filter-btn .button:hover, .filter-btn .button:focus{
     color: var(--color-hero);
     background: var(--color-blue);
+
 }
-.exampl-item>h3{
+
+.exampl-item h2{
     color: var(--color-title);
 }
-.exampl-item>p{
+.exampl-item p{
     color: var(--color-text);
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.9;
+    
 }
