--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,32 +1,74 @@
 
 
+
+
+
 /* Page Index */
 /* main */
 .section .section-title{
     color: var(--color-title);
 }
+
 /* hero */
 .hero{
     background: var(--color-bg-hero);
     color: var(--color-hero);
+    height: 600px;
+    text-align: center;
+}
+
+.page-hero{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 200px;
+}
+
+.hero-title{
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    
+    margin-bottom: 30px;
 
 }
+
 .hero-btn{
     background: var(--color-blue);
     color: var(--color-hero);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    letter-spacing: 0.06em;
+
+    padding: 10px 32px;
+
+}
+
+.btn{
+   
+    display: flex;
+    justify-content: center;
 }
 
 .hero-btn:hover, .hero-btn:focus{
     background: #188CE8;
 }
 /* description */
+.section h2{
+    font-size: 36px;
+}
+
 .list-description h3{
     color: var(--color-title);
 }
 
-.section.section-bg{
+.section-persons{
     background: var(--color-bg-second);
 }
 
@@ -34,7 +76,39 @@
     text-transform: uppercase;
 }
 
+.advan-text{
 
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+
+}
+
+.advan{
+        color: var(--color-title);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.15;
+        letter-spacing: 0.03em;
+
+}
+
+.section-persons .persons-name{
+    color: var(--color-title);
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+}
+
+.section-persons .persons-item{
+        color: var(--color-text);
+    
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.19;
+
+}
 
 
 
